--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
-
 server.port=8081
 server.servlet.context-path=/bcoint-challange-back
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.force=true
+
+api.generator.wordcounter.path=http://localhost:8080/generator/word-counter
+api.generator.wordcounter.resource.text.path=/text
